# orthoism

./: .gitignore  CMakeLists.txt  LICENSE  OrthoTileSource.cpp  OrthoTileSource.h  README.md  orthoism.cpp  zenortho.sh
